revised project